# zimg

./: .gitignore  CMakeLists.txt  meson.build  meson_options.txt  zimg-config.cmake.in
doc/example/: CMakeLists.txt  meson.build
src/testapp/: CMakeLists.txt  meson.build
src/testcommon/: CMakeLists.txt  meson.build  mmap.cpp
src/zimg/: CMakeLists.txt  meson.build
src/zimg/api/: zimg.h
src/zimg/common/arm/: cpuinfo_arm.cpp
subprojects/: gtest.wrap
test/: CMakeLists.txt  meson.build
