# Copyright (C) 2025 Rob Hall
# SPDX-License-Identifier: MIT

testapp_src = files(
  'colorspaceapp.cpp',
  'cpuinfoapp.cpp',
  'depthapp.cpp',
  'frame.cpp',
  'graphapp.cpp',
  'main.cpp',
  'pair_filter.cpp',
  'resizeapp.cpp',
  'table.cpp',
  'unresizeapp.cpp',
  'utils.cpp',
)

executable('testapp', testapp_src,
  dependencies: testcommon)
